kubernetes/apps/demo/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: whoami
  template:
    metadata:
      labels:
        app.kubernetes.io/name: whoami
        network/allow-external: "true"
    spec:
      containers:
        - name: whoami
          image: ghcr.io/traefik/whoami
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          resources:
            limits:
              memory: 150Mi
            requests:
              memory: 150Mi
      nodeSelector:
        node-role.kubernetes.io/control-plane: "true"
