kubernetes/apps/demo/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: whoami-service
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: whoami
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
