kubernetes/apps/demo/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whoami-internal-ingress
spec:
  entryPoints:
    - websecure
  ingressClassName: traefik-internal
  routes:
    - match: Host(`whoami.home.lungoo.de`)
      kind: Rule
      services:
        - name: whoami-service
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whoami-external-ingress
spec:
  entryPoints:
    - websecure
  ingressClassName: traefik-external
  routes:
    - match: Host(`whoami.lungoo.dev`)
      kind: Rule
      middlewares:
        - name: forwardauth
          namespace: authelia
      services:
        - name: whoami-service
          port: 80
